<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_alignParentBottom="false" >

    <Button
        android:id="@+id/btnGeri"
        android:layout_width="134dp"
        android:layout_height="85dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="151dp"
        android:layout_marginTop="541dp"
        android:layout_marginEnd="126dp"
        android:layout_marginBottom="105dp"
        android:text="@string/geri" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="238dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="464dp"
        android:text="@string/radiobutton"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="183dp"
        android:layout_marginBottom="508dp"
        android:text="@string/radiobutton2" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="273dp"
        android:layout_marginBottom="600dp"
        android:text="@string/radiobutton3" />
</RelativeLayout>